Fix method to test if an url is reachable or not